loader overflow bug

--- a/src/styles/site.scss
+++ b/src/styles/site.scss
@@ -176,6 +176,7 @@ footer{
 
 nav{
     background-color: rgba($color-3, 0.9);
+    overflow-x: hidden;
     
     &:before{
         content: "";
